--- a/index.css
+++ b/index.css
@@ -1,31 +1,157 @@
 @import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*{
+    margin: 0;
+    padding: 0;
 }
-.showcase {
-  width: 100%;
-  height: auto;
-  position: relative;
-}
-.showcase video {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: cover;
+body{
+    background-color:#242026;
 }
 
-.title {
-  font-family: "Creepster", cursive;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  font-size: 90px;
-  color: #fff;
-  mix-blend-mode: multiply;
+:root {
+    --font-style: 'Nunito Sans', sans-serif;
+    --light_color: #cbbddb;
+    --mid_color: #8f7cec;
+    --dark_color: #242026;
+}
+
+.navigation {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    background-color: rgba(68, 26, 91, 0.5);
+
+}
+.login-btn{
+    float: right;
+    text-decoration: none;
+    padding-right: 2%;
+    color: #fff;
+    font-family: Arial;
+    font-weight: 900;
+}
+.login-btn:hover{
+    color: var(--mid_color);
+    text-shadow: #242026;
+}
+
+.navbar-right {
+    float: right;
+    padding-right: 5%;
+}
+
+.navbar-right a {
+    text-decoration: none;
+    padding: 10px;
+    color: #fff;
+    font-family: Arial;
+    font-weight: 900;
+}
+
+
+.navbar-right a:hover {
+    text-decoration: underline;
+}
+
+.navbar-logo {
+    padding-left: 5%;
+    font-family: "Creepster", cursive;
+    font-size: 4vw;
+    text-decoration: none;
+    color: #fff;
+}
+
+
+.video-container {
+    z-index: -100;
+    width: 100%;
+    height: 75%;
+    max-height: 350px;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+#video-bg {
+    width: 100%;
+    object-fit: cover;
+
+}
+
+
+
+
+
+footer{
+    background-color: rgba(68, 26, 91, 0.5);
+    padding: 25px;
+    text-align: center;
+    color:#fff;
+}
+.contact{
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+}
+.contact label{
+    text-decoration: underline;
+    font-weight: 800;
+}
+
+@media (max-width: 640px){
+    .navbar-right{
+        float: left;
+        padding-left: 4%;
+    }
+    .navbar-logo{
+        font-size: 30px;
+    }
+    .navbar-right a {
+        padding: 2vw;
+    }
+}
+
+@media (max-width: 370px){
+    .navbar-logo{
+        font-size: 7vw;
+        padding: 2%;
+    }
+    .video-container{
+        height: 300px;
+    }
+    .navbar-right a {
+        padding: 2vw;
+    }
+    #video-bg{
+        height: 160px;
+    }
+}
+
+/* Custom Scrollbar */
+
+::-webkit-scrollbar{
+    width: 1em;
+
+}
+
+::-webkit-scrollbar-track{
+    background-color: var(--light_color);
+    border-radius: 5px;
+    box-shadow:inset 0 0 5px var(--dark_color);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--mid_color);
+    border-radius: 5px;
+    outline: 1px solid var(--dark_color);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: var(--dark_color);
+    width: 15px;
+    border-radius: 3px;
 }
