--- a/login.css
+++ b/login.css
@@ -2,6 +2,9 @@
 
 :root {
     --font-style: 'Nunito Sans', sans-serif;
+    --light_color: #cbbddb;
+    --mid_color: #8f7cec;
+    --dark_color: #242026;
 }
 
 * {
@@ -15,7 +18,7 @@ body {
 
 .login_box {
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     width: 400px;
     padding: 40px;
@@ -130,4 +133,32 @@ option{
     margin:auto;
     color:#8f7cec;
     text-decoration: none;
+}
+#register a:hover{
+    text-decoration: underline;
+}
+
+/* Custom Scrollbar */
+
+::-webkit-scrollbar{
+    width: 1em;
+
+}
+
+::-webkit-scrollbar-track{
+    background-color: var(--light_color);
+    border-radius: 5px;
+    box-shadow:inset 0 0 5px var(--dark_color);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--mid_color);
+    border-radius: 5px;
+    outline: 1px solid var(--dark_color);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: var(--dark_color);
+    width: 15px;
+    border-radius: 3px;
 }
