--- a/login.css
+++ b/login.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Numito+Sans:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
 
 :root {
     --font-style: 'Nunito Sans', sans-serif;
@@ -9,20 +10,73 @@
 
 * {
     box-sizing: border-box;
+    margin: 0%;
+    padding: 0%;
 }
 
 body {
     background: #131315;
     font-family: var(--font-style);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
+/* <-------NAV-----------> */
+.navigation {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    background-color: rgba(51, 18, 68, 0.9);
+
+}
+.login-btn{
+    float: right;
+    text-decoration: none;
+    padding-right: 2%;
+    color: #fff;
+    font-family: Arial;
+    font-weight: 900;
+}
+.login-btn:hover{
+    color: var(--mid_color);
+    text-shadow: #242026;
+}
+
+.navbar-right {
+    float: right;
+    padding-right: 5%;
+}
+
+.navbar-right a {
+    text-decoration: none;
+    padding: 10px;
+    color: #fff;
+    font-family: Arial;
+    font-weight: 900;
+}
+
+
+.navbar-right a:hover {
+    text-decoration: underline;
+}
+
+.navbar-logo {
+    padding-left: 5%;
+    font-family: "Creepster", cursive;
+    font-size: 4vw;
+    text-decoration: none;
+    color: #fff;
+}
+
+/* <---------MAIN---------> */
 .login_box {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    width: 400px;
+    position: relative;
+    margin: 130px 50px 20px 50px;
     padding: 40px;
-    transform: translate(-50%, -50%);
     background-color: #242026;
     box-shadow: 0 15px 25px rgba(143, 124, 236, 0.7);
     border-radius: 10px;
@@ -38,22 +92,26 @@ body {
 .login_box .profile {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: #fff;
     margin: 20px 20px 40px 40px;
 
 }
 
 select{
-    margin: 10px 15px;
+    margin: -2px 12px;
     font-size: 20px;
+    padding: 10px;
     font-weight: bold;
     background: transparent;
-    color: #8f7cec;
+    color: var(--mid_color);
     width: 50%;
     letter-spacing: 2px;
     text-align: center;
     box-shadow: 2px 2px  rgba(143, 124, 236, 0.7);
 }
+
 select:hover{
     border-radius: 5px;
     box-shadow: 5px 5px 5px rgba(143, 124, 236, 0.7);
@@ -100,6 +158,7 @@ option{
 }
 #submit{
     padding: 10px 20px;
+    background: transparent;
     color: #cbbddb;
     font-size: 16px;
     text-decoration: none;
@@ -138,27 +197,71 @@ option{
     text-decoration: underline;
 }
 
+/* <---------FOOTER----------> */
+footer{
+    background-color: rgba(68, 26, 91, 0.5);
+    padding: 25px;
+    margin-top: 100px;
+    width: 100%;
+    text-align: center;
+    color:#fff;
+}
+.contact{
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+}
+.contact label{
+    text-decoration: underline;
+    font-weight: 800;
+}
+
+
+@media (max-width: 640px){
+    .navbar-right{
+        float: left;
+        padding-left: 4%;
+    }
+    .navbar-logo{
+        font-size: 30px;
+    }
+    .navbar-right a {
+        padding: 2vw;
+    }
+}
+
+@media (max-width: 370px){
+    .navbar-logo{
+        font-size: 7vw;
+        padding: 2%;
+    }
+    .navbar-right a {
+        padding: 2vw;
+    }
+}
+
 /* Custom Scrollbar */
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 1em;
 
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
     background-color: var(--light_color);
     border-radius: 5px;
-    box-shadow:inset 0 0 5px var(--dark_color);
+    box-shadow: inset 0 0 5px var(--dark_color);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background-color: var(--mid_color);
     border-radius: 5px;
     outline: 1px solid var(--dark_color);
 }
 
-::-webkit-scrollbar-thumb:hover{
-    background-color: var(--dark_color);
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(38, 16, 35);
     width: 15px;
     border-radius: 3px;
 }
